@@ -1,3 +1,8 @@
+Thu May  8 22:00:04 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/TypeChecker.java: allow safe
+	  implicit integer cast like "char c = 0" adhocly.
+
 Thu May  8 21:39:49 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/type/IntegerType.java: new method
